# Multimodal-Expense-Assistant

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agent/: agent.py
backend/app/api/: db_dep.py  schemas.py
backend/app/core/: db.py  llm_fallback.py  runtime.py  settings.py
backend/app/models/: expense.py
backend/app/services/: adk_tools.py  expense_service.py  rag.py  rag_bootstrap.py  receipt.py  tools.py
backend/rag/index/: chroma.sqlite3
backend/scripts/: migrate_sqlite_to_pg.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Chat.tsx  Header.tsx  ReceiptUpload.tsx  Summary.tsx
frontend/src/lib/: api.ts
rag/: ingest.py
